--- a/www/community.html
+++ b/www/community.html
@@ -52,7 +52,7 @@
           <!-- На активный пункт меню навесить класс .active -->
             <li><a href="/main.html" title="Главная" class="text bold">Главная</a></li>
             <li><a href="/news.html" title="Новости" class="text bold">Новости</a></li>
-            <li><a href="/community.html" title="Сообщества" class="text bold active">Сообщества</a></li>
+            <li><a href="/community.html" title="Сообщества" class="text bold active-page">Сообщества</a></li>
             <li><a href="/company.html" title="Компании" class="text bold">Компании</a></li>
             <li><a href="/flea-market.html" title="Барахолка" class="text bold">Барахолка</a></li>
         </ul>
