--- a/www/company.html
+++ b/www/company.html
@@ -55,7 +55,7 @@
             <li><a href="/main.html" title="Главная" class="text bold">Главная</a></li>
             <li><a href="/news.html" title="Новости" class="text bold">Новости</a></li>
             <li><a href="/community.html" title="Сообщества" class="text bold">Сообщества</a></li>
-            <li><a href="/company.html" title="Компании" class="text bold active">Компании</a></li>
+            <li><a href="/company.html" title="Компании" class="text bold active-page">Компании</a></li>
             <li><a href="/flea-market.html" title="Барахолка" class="text bold">Барахолка</a></li>
         </ul>
 
@@ -116,14 +116,13 @@
 
           <section class="l-company col xs-9">
             <div class="block b-company paginator">
-
               <div class="b-main-title title-search">
-                  <h3>Все отрасли</h3>
+                <h1>Компании</h1>
                 <form name="search" class="b-filter__find">
-                  <input type="text" name="search">
+                  <input type="text" name="search" placeholder="Найти компанию">
                 </form>
               </div>
-
+              <h3>Все отрасли</h3>
               <div class="b-company__container pagin-container pagin-wrap">
 
 <!-- Для добавления стиля ТОП компании добавить атрибут "data-top-item" -->
@@ -352,12 +351,12 @@
 
               <div class="block b-filter">
                 <div class="b-filter-wrapp">
-                  <!-- <h4><span>256</span> компаний</h4> -->
+                  <h4>Поиск по компаниям</h4>
                   <form class="b-filter__form" name="filter">
                   
                     <div id="wrapperCategory" class="b-filter__form-item droplist">
                       <select id="category">
-                        <option data-title value="all">Все отрасли</option>
+                        <option data-title value="all">Выберите отрасль</option>
                         <option>Сервисы</option>
                         <option>Авто</option>
                         <option>Авто</option>
