--- a/www/main.html
+++ b/www/main.html
@@ -47,7 +47,7 @@
         <a href="index.html" title="Main" class="b-menu__wrapp-logo col xs-2"></a>
         <ul class="b-menu__wrapp-list col xs-7">
           <!-- На активный пункт меню навесить класс .active -->
-            <li><a href="/main.html" title="Главная" class="text bold active">Главная</a></li>
+            <li><a href="/main.html" title="Главная" class="text bold active-page">Главная</a></li>
             <li><a href="/news.html" title="Новости" class="text bold">Новости</a></li>
             <li><a href="/community.html" title="Сообщества" class="text bold">Сообщества</a></li>
             <li><a href="/company.html" title="Компании" class="text bold">Компании</a></li>
