--- a/www/my-page.html
+++ b/www/my-page.html
@@ -293,6 +293,11 @@
                         <p class="text subtext data">24.10.2016</p>
                       </div>
                       <p class="text" data-clamp>Установил… ГРОМКО всеравно, ну я не знаю, почему-то на этой машинке более громкий выхлоп чем на черной. Типично волговский рык. Глушитель Мотор Сич. Качество среднее. Не понравилось исполнение выходного фланца. Вообще это мне не нравится во всех Волговских глушителях. Но на предыдущем как-то поаккуратней этот выходной загиб вверх исполнен.</p>
+                      <div class="b-comments-view">
+                        <span class="view text">234 просмотров</span>
+                        <span class="comments text">23 комментария</span>
+                        <span class="like text">24 оценили</span>
+                      </div>
                     </div>
                   </article>
                   <article class="b-logbook__container-item">
@@ -307,10 +312,11 @@
                         <p class="text subtext data">03.08.2016</p>
                       </div>
                       <p class="text" data-clamp>В выходные- старт!</p>
-                      <p class="rating-comments-block text">
-                        <span class="rating" title="Рейтинг">12</span>
-                        <span class="comments" title="Комментариев">200</span>
-                      </p>
+                      <div class="b-comments-view">
+                        <span class="view text">234 просмотров</span>
+                        <span class="comments text">23 комментария</span>
+                        <span class="like text">24 оценили</span>
+                      </div>
                     </div>
                   </article>
                   <article class="b-logbook__container-item">
@@ -325,6 +331,11 @@
                         <p class="text subtext data">13.05.2016</p>
                       </div>
                       <p class="text" data-clamp>Наконец-то установил ксенон в птф. Взял 4300к под оригинальный ближний цвет. Светит отлично! Ничего не заменит ксенона, какие лампы только не ставил!</p>
+                      <div class="b-comments-view">
+                        <span class="view text">234 просмотров</span>
+                        <span class="comments text">23 комментария</span>
+                        <span class="like text">24 оценили</span>
+                      </div>
                     </div>
                   </article>
                   <p class="display-all text"><span>показать все записи</span></p>
@@ -349,10 +360,20 @@
                     <div class="b-comments-item item">
                       <img src="img/temp/logo-user-1.png" alt="">
                       <div class="b-comments-block">
-                        <p class="b-comments-block-title">
+                        <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
+                          <p class="rating-stars">
+                          <!-- Рейтинг добавить аттрибут 
+                               "data-aсtive" - целая звезда
+                         -->
+                            <span data-active=""></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                          </p>
                           <span class="text subtext data">03.10.2016</span>
-                        </p>
+                        </div>
                         <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
                       </div>
                     </div>
@@ -360,10 +381,20 @@
                     <div class="b-comments-item item">
                       <img src="img/temp/logo-user-24.png" alt="">
                       <div class="b-comments-block">
-                        <p class="b-comments-block-title">
+                        <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
+                          <p class="rating-stars">
+                          <!-- Рейтинг добавить аттрибут 
+                               "data-aсtive" - целая звезда
+                         -->
+                            <span data-active=""></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                          </p>
                           <span class="text subtext data">15.08.2016</span>
-                        </p>
+                        </div>
                         <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
                       </div>
                     </div>
