--- a/www/one-ad-page.html
+++ b/www/one-ad-page.html
@@ -33,6 +33,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
     <script src="http://s.codepen.io/assets/libs/modernizr.js" type="text/javascript"></script>
     <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Detect.js/2.2.2/detect.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Clamp.js/0.5.1/clamp.min.js"></script>
     <script src="https://cdn.polyfill.io/v2/polyfill.min.js"></script>
     <script type="text/javascript" src="js/common.js"></script>
     <script type="text/javascript" src="js/script-general.js"></script>
@@ -156,28 +157,117 @@
               </div>
               <p class="b-one-ad__about text">Комплект легкосплавных дисков R16 5х110 для Opel Omega B/Opel Vectra В/C, ОТПРАВКА В ДЕНЬ ЗАКАЗА, НОВАЯ ПОЧТА, ИНТАЙМ, ДЕЛИВЕРИ, есть все запчасти по даному авто, разборка опель,без резины цена дисков 4000 грн</p>
             </div>
+            
+            <div class="b-one-ad__other block">
+              <h3>Похожие обьявления</h3>
+
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/3.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                 </div>
+                </div>
+                <div class="b-ad__item-price text">
+                  <span>20</span> <span>$</span>
+                </div>
+              </div>
+
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/2.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Title Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet ut odio harum natus delectus laboriosam aspernatur optio dolor ex dolorum, impedit odit sint officiis nesciunt, corporis? Deleniti assumenda inventore mollitia.</a></h5>
+                 </div>
+                </div>
+                <div class="b-ad__item-price text">
+                  <span>20</span> <span>$</span>
+                </div>
+              </div>
+
+              <div class="b-ad__item item">
+                <div class="b-ad__item-img">
+                  <figure>
+                    <img src="img/temp/auto/5.jpg" alt="">
+                  </figure>
+                </div>
+                <div class="b-ad__item-info">
+                  <div class="b-ad__item-info-top">
+                    <h5 data-clamp><a href="one-ad-page.html">Deleniti assumenda inventore mollitia.</a></h5>
+                 </div>
+                </div>
+                <div class="b-ad__item-price text">
+                  <span>200</span> <span>$</span>
+                </div>
+              </div>
+
+            </div>
           </section>
 
           <section class="l-contact col xs-3">
             <div class="block b-contact">
-              <p class="text subtext">Продавец</p>
               <div class="b-contact__saler">
                 <img src="img/temp/author/3.jpg" alt="Продавец" class="b-contact__saler-photo">
-                <p class="b-contact__saler-item name text bold"><a href="my-page.html" title="">Leonidis Castonedis</a></p>
+                <p class="name text bold"><a href="my-page.html" title="">Leonidis Castonedis</a></p>
                 <p class="b-contact__saler-item city text">Lamia</p>
-                <p class="b-contact__saler-item tel"><a href="tel:+302105241296" title="Telephone" class="text">+30 21 0524 1296</a></p>
-                <p class="b-contact__saler-item email"><a href="mailto:email@email.com?subject=feedback" title="E-mail" class="text">email@email.com</a></p>
+                <p class="b-contact__saler-item tel">
+                  <span class="telephone text bold">Телефон</span>
+                  <a href="tel:+302105241296" title="Telephone" class="text">+30 21 0524 1296</a>
+                </p>
+                <p class="b-contact__saler-item email">
+                  <span class="text bold">E-mail</span>
+                  <a href="mailto:email@email.com?subject=feedback" title="E-mail" class="text">email@email.com</a>
+                </p>
+                <p class="b-contact__saler-item email">
+                  <span class="text bold">Skype</span>
+                  <a href="skype:leonidis.сast" title="Skype" class="text">leonidis.сast</a>
+                </p>
               </div>
               <button class="button middle" name="open-message-popup">Написать сообщение</button>
-              <p class="b-contact__other-ad text bold" title="Другие обьявления" data-sum-ad="10">Другие обьявления автора</p>
-
-              <div class="b-contact__other-ad-wrapp">
-                <div class="b-contact__other-ad-item">
+            </div>
+            <div class="wrapp-float">
+              <div class="b-contact__other-ad-wrapp float-bar">
+                <div>
+                  <p class="b-contact__other-ad text bold" title="Другие обьявления" data-sum-ad="10">Другие обьявления продавца</p>
+                  <div class="b-contact__other-ad-item item">
                     <figure>
                       <img src="img/temp/auto/2.jpg" alt="">
                     </figure>
                     <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
                   </div>
+                  <div class="b-contact__other-ad-item item">
+                    <figure>
+                      <img src="img/temp/auto/2.jpg" alt="">
+                    </figure>
+                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                  </div>
+                  <div class="b-contact__other-ad-item item">
+                    <figure>
+                      <img src="img/temp/auto/2.jpg" alt="">
+                    </figure>
+                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                  </div>
+                  <div class="b-contact__other-ad-item item">
+                    <figure>
+                      <img src="img/temp/auto/2.jpg" alt="">
+                    </figure>
+                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                  </div>
+                  <div class="b-contact__other-ad-item item">
+                    <figure>
+                      <img src="img/temp/auto/2.jpg" alt="">
+                    </figure>
+                    <a href="#" class="text" data-clamp="">Как научить Рено Дастер плавать или не повторяйте моих ошибок</a>
+                  </div>
+                </div>
               </div>
 
           </section>
