--- a/www/one-item-news.html
+++ b/www/one-item-news.html
@@ -169,12 +169,25 @@
                 </div>
               </div>
 
-              <div class="b-one-news__social b-social">
-                <a href="#" class="b-social-item m-social-item_fb"></a>
-                <a href="#" class="b-social-item m-social-item_tw"></a>
-                <a href="#" class="b-social-item m-social-item_gm"></a>
+              <div class="b-post__item-bottom">
+                <div class="b-rating-dislike-bar">
+                  <span class="rating-click minus-rating"></span>
+                  <span class="display-rating text">230</span>
+                  <span class="rating-click plus-rating"></span>
+                  <span class="date text">16.10.2016</span>
+                  <span class="add text">Добавил</span>
+                  <a href="my-page.html" class="link text">Georgis Kastanedipopulos</a>
+  <!--                 <span class="view text">234 просмотров</span>
+                  <span class="comments text">23 комментария</span> -->
+                </div>
+                <div class="b-one-news__social b-social">
+                  <a href="#" class="b-social-item m-social-item_fb"></a>
+                  <a href="#" class="b-social-item m-social-item_tw"></a>
+                  <a href="#" class="b-social-item m-social-item_gm"></a>
+                </div>
               </div>
             </div>
+
 
             <div class="block b-comments">
               <div class="b-coment-wrapp paginator">
@@ -198,10 +211,20 @@
                     <div class="b-comments-item item">
                       <img src="img/temp/logo-user-1.png" alt="">
                       <div class="b-comments-block">
-                        <p class="b-comments-block-title">
+                        <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
+                          <p class="rating-stars">
+                          <!-- Рейтинг добавить аттрибут 
+                               "data-aсtive" - целая звезда
+                         -->
+                            <span data-active=""></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                          </p>
                           <span class="text subtext data">03.10.2016</span>
-                        </p>
+                        </div>
                         <p class="b-comments-text text">Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить. Бывает и по литру, если действительно 20 уе, то, конечно, лучше её втарить.</p>
                       </div>
                     </div>
@@ -209,10 +232,20 @@
                     <div class="b-comments-item item">
                       <img src="img/temp/logo-user-24.png" alt="">
                       <div class="b-comments-block">
-                        <p class="b-comments-block-title">
+                        <div class="b-comments-block-title">
                           <a href="#" class="text">Alen</a>
+                          <p class="rating-stars">
+                          <!-- Рейтинг добавить аттрибут 
+                               "data-aсtive" - целая звезда
+                         -->
+                            <span data-active=""></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                          </p>
                           <span class="text subtext data">15.08.2016</span>
-                        </p>
+                        </div>
                         <p class="b-comments-text text">Да, спасибо за помощь.В принципе по твоему названию и нашел нужное))</p>
                       </div>
                     </div>
